manifests/nginx-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-headless-service
  namespace: default
spec:
  clusterIP: None 
  selector:
    app: nginx
  ports:
  - name: http-web-svc
    protocol: TCP
    port: 80
    targetPort: http-web-svc
