manifests/exercise-env.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: network-exercise-backend
---
apiVersion: v1
kind: Namespace
metadata:
  name: network-exercise-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: network-exercise-backend
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: network-exercise-backend
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27018
      targetPort: 27018
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: network-exercise-frontend
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPort: 8081
        livenessProbe:
          failureThreshold: 6
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8081
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 6
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8081
          timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: network-exercise-frontend
spec:
  selector:
    app: mongo-express
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: network-exercise-backend
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
